--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "keyboardjs": "^2.4.1",
+    "keykeyjs": "^1.0.6",
     "make-dir": "^1.0.0",
     "node-sass": "^4.5.3",
     "url-loader": "^0.5.9",
